terraform-basics/route-table.tf
# Creating RT for Private Subnet
 resource "aws_route_table" "priRT" {
   // No route since this is a private route table
   vpc_id = aws_vpc.main-vpc.id
 }

# Creating RT for Public Subnet
 resource "aws_route_table" "pubRT" {
  vpc_id =  aws_vpc.main-vpc.id
     route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.IGW.id
     }
 }

# Associating the Public RT with the Public Subnets
resource "aws_route_table_association" "PubRTAss" {
subnet_id = aws_subnet.mypublicsubnet.id
route_table_id = aws_route_table.pubRT.id
}

# Associating the Private RT with the Private Subnets
resource "aws_route_table_association" "PriRTAss" {
  subnet_id = aws_subnet.myprivatesubnet.id
  route_table_id = aws_route_table.priRT.id
}

# Associating the Private 2 RT with the Private Subnets
resource "aws_route_table_association" "PriRTAss2" {
  subnet_id = aws_subnet.myprivatesubnet2.id
  route_table_id = aws_route_table.priRT.id
}
